fix(rendering): :bug: fix FileUtils loading process